--- a/NEWS
+++ b/NEWS
@@ -18,6 +18,8 @@ USE AT YOUR OWN RISK.  NOT RECOMMENDED FOR PRODUCTION USE!
 * Add support for a new rd.net.dhcp.client-id option in
   nm-initrd-generator.
 * Add gsm device-uid setting to restrict the devices the connection applies to.
+* Support configuring the HSR protocol version via the
+  "hsr.protocol-version" property.
 
 =============================================
 NetworkManager-1.54
