core: pass certificates as blobs to supplicant for private connections
In case of private connections, the device has already read the
certificates and keys content from disk, validating that the owner of
the connection has access to them. Pass those files as blobs to the
supplicant so that it doesn't have to read them again from the
filesystem, creating the opportunity for TOCTOU bugs.

(cherry picked from commit 36ea70c0993cb48d3155c2de6d6c8e48a2b08c60)
(cherry picked from commit aac5b80fcad34489e737b6eb1c5389bd32169d23)
(cherry picked from commit f08ee617b99a25c7c3d4d820fbe2539f9b78e986)

--- a/NEWS
+++ b/NEWS
@@ -5,11 +5,15 @@ Overview of changes since NetworkManager-1.52.1
 
 * Support reapplying the "sriov.vfs" property as long as
   "sriov.total-vfs" is not changed.
+* For private connections (the ones that specify a user in the
+  "connection.permissions" property), verify that the user can access
+  the 802.1X certificates and keys set in the connection.
 
 =============================================
 NetworkManager-1.52.1
 Overview of changes since NetworkManager-1.52
 =============================================
+
 * Fail early if we cannot get current FEC
   (Forward Error Correction) value.
 * Allow reapplying ovs-bridge and ovs-port properties.
