core: pass certificates as blobs to supplicant for private connections
In case of private connections, the device has already read the
certificates and keys content from disk, validating that the owner of
the connection has access to them. Pass those files as blobs to the
supplicant so that it doesn't have to read them again from the
filesystem, creating the opportunity for TOCTOU bugs.

(cherry picked from commit 36ea70c0993cb48d3155c2de6d6c8e48a2b08c60)
(cherry picked from commit aac5b80fcad34489e737b6eb1c5389bd32169d23)

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,13 @@
 ===============================================
+NetworkManager-1.54.3
+Overview of changes since NetworkManager-1.54.2
+===============================================
+
+* For private connections (the ones that specify a user in the
+  "connection.permissions" property), verify that the user can access
+  the 802.1X certificates and keys set in the connection.
+
+===============================================
 NetworkManager-1.54.2
 Overview of changes since NetworkManager-1.54.1
 ===============================================
