--- a/NEWS
+++ b/NEWS
@@ -41,6 +41,9 @@ USE AT YOUR OWN RISK.  NOT RECOMMENDED FOR PRODUCTION USE!
   available devices when creating connection profiles for physical interfaces
   (Ethernet, Wi-Fi, etc.).
 * Add support for CLAT (464XLAT) using a BPF program.
+* Change the default value of the ipv4.dhcp-ipv6-only-preferred property
+  to a new value "auto" which automatically enables the option when CLAT
+  is enabled ("yes" or "auto") in the connection profile.
 
 =============================================
 NetworkManager-1.56
