ipv4: enable by default ipv4.dhcp-ipv6-only-preferred when CLAT is on
When CLAT is enabled, we want to also enable and honor by default DHCP
option 108 (IPv6-only preferred), so that the host can avoid
requesting an IPv4 address and go IPv6-only.

--- a/NEWS
+++ b/NEWS
@@ -30,6 +30,9 @@ USE AT YOUR OWN RISK.  NOT RECOMMENDED FOR PRODUCTION USE!
   "connection.gateway-ping-timeout" or "connection.ip-ping-addresses"
   properties are set, instead of relying on the "ping" tool.  
 * Add support for CLAT (464XLAT) using a BPF program.
+* Change the default value of the ipv4.dhcp-ipv6-only-preferred property
+  to a new value "auto" which automatically enables the option when CLAT
+  is enabled ("yes" or "auto") in the connection profile.
 
 =============================================
 NetworkManager-1.56
