--- a/NEWS
+++ b/NEWS
@@ -29,6 +29,8 @@ USE AT YOUR OWN RISK.  NOT RECOMMENDED FOR PRODUCTION USE!
 * The "band" property of Wi-fi connections now accepts the "6GHz"
   value.
 * Show the Wi-Fi band of APs in the scan results from nmcli.
+* Expose the Wi-Fi generation (Wi-Fi 4, Wi-Fi 5, etc) of access points
+  and make that information available in nmcli.
 
 =============================================
 NetworkManager-1.56
